test/should-fail/code不能有参数.j
function test takes integer i returns nothing
    local code c = function test
endfunction